@@ -13,7 +13,6 @@ The rules for this file:
   * release numbers follow "Semantic Versioning" http://semver.org
 
 ------------------------------------------------------------------------------
-
 ??/??/?? IAlibay, pgbarletta, mglagolev, hmacdope, manuel.nuno.melo, chrispfae, 
          ooprathamm, MeetB7, BFedder
  * 2.5.0
@@ -31,6 +30,9 @@ Enhancements
   * AuxReaders are now pickle-able and copy-able (Issue #1785, PR #3887)
   * Add pickling support for Atom, Residue, Segment, ResidueGroup 
     and SegmentGroup. (PR #3953)
+* PDBReader now populates ts.data['tempfactor'] with the tempfactor for
+  each atom *for each frame*.  Note, this does not affect the topology (i.e.
+  `AtomGroup.tempfactors` is not dynamically updated. (Issue #3825)
 
 Changes
   * As per NEP29 the minimum supported NumPy version has been raised to 1.21
